Re arrange Health Calc button color and text color

--- a/app/src/main/res/layout/activity_health_cal.xml
+++ b/app/src/main/res/layout/activity_health_cal.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HealthCal"
-    android:background="@drawable/low">
+    >
 
     <TextView
         android:id="@+id/txtcal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Health Calculator"
-        android:textColor="@color/captions"
+        android:textColor="@color/design_default_color_on_secondary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,9 +53,9 @@
         android:id="@+id/btnCalBMI"
         android:layout_width="250sp"
         android:layout_height="68sp"
-        android:background="@color/buttonBackground"
+        android:background="#350202"
         android:text="Body Mass Index(BMI)"
-        android:textColor="@color/buttonTextColour"
+        android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,9 +68,9 @@
         android:id="@+id/btnBMR"
         android:layout_width="250sp"
         android:layout_height="68sp"
-        android:background="@color/buttonBackground"
+        android:background="#350202"
         android:text="Basal Metabolic Rate(BMR)"
-        android:textColor="@color/buttonTextColour"
+        android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,9 +83,9 @@
         android:id="@+id/btnFat"
         android:layout_width="250sp"
         android:layout_height="68sp"
-        android:background="@color/buttonBackground"
+        android:background="#350202"
         android:text="Body Fat Percentage"
-        android:textColor="@color/buttonTextColour"
+        android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
