Re arrange Interface components and colors

--- a/app/src/main/res/layout/activity_b_m_icalculate.xml
+++ b/app/src/main/res/layout/activity_b_m_icalculate.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calculate BMI Index"
-        android:textColor="@color/captions"
+        android:textColor="#670521"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Height"
-        android:textColor="#031373"
+        android:textColor="#650C25"
         android:textSize="18sp"
         android:textStyle="bold"
         app:drawableTint="@color/colorPrimaryDark"
@@ -54,10 +54,11 @@
 
     <TextView
         android:id="@+id/txtbmiIndex"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/textBackground"
-        android:text="Your BMI"
+        android:layout_width="91dp"
+        android:layout_height="27dp"
+        android:background="#650C25"
+        android:text="  Your BMI"
+        android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,10 +70,11 @@
 
     <TextView
         android:id="@+id/txtYouare"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/textBackground"
-        android:text="You Are"
+        android:layout_width="77dp"
+        android:layout_height="30dp"
+        android:background="#650C25"
+        android:text="  You Are"
+        android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -87,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Weight"
-        android:textColor="#031373"
+        android:textColor="#650C25"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -125,9 +127,9 @@
         android:id="@+id/btnCalc"
         android:layout_width="133dp"
         android:layout_height="58dp"
-        android:background="@color/buttonBackground"
+        android:background="#3A0606"
         android:text="Calculate"
-        android:textColor="@color/buttonTextColour"
+        android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
