--- a/app/src/main/res/layout/activity_my_lab_bookings.xml
+++ b/app/src/main/res/layout/activity_my_lab_bookings.xml
@@ -13,11 +13,11 @@
         android:id="@+id/textView"
         android:layout_width="380sp"
         android:layout_height="30sp"
-        android:background="@color/buttonTextColour"
+        android:background="#650C25"
         android:gravity="center_horizontal"
         android:text="My Lab Bookings"
         android:textAlignment="center"
-        android:textColor="@color/captions"
+        android:textColor="@color/design_default_color_background"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
