--- a/app/src/main/res/layout/activity_lab_chemist_list.xml
+++ b/app/src/main/res/layout/activity_lab_chemist_list.xml
@@ -46,7 +46,7 @@
         android:layout_marginTop="8dp"
         android:text="Lab Chemists List"
         android:textStyle="bold"
-        android:textColor="#031373"
+        android:textColor="#3A0606"
         android:textSize="26sp"
         app:layout_constraintBottom_toTopOf="@+id/searchView"
         app:layout_constraintEnd_toEndOf="parent"
