Text color arranged

--- a/app/src/main/res/layout/activity_b_m_icalculate.xml
+++ b/app/src/main/res/layout/activity_b_m_icalculate.xml
@@ -12,7 +12,7 @@
         android:layout_width="175dp"
         android:layout_height="37dp"
         android:text=""
-        android:textColor="@color/formTxtColour"
+        android:textColor="#3A0606"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -128,8 +128,8 @@
         android:layout_width="133dp"
         android:layout_height="58dp"
         android:background="#3A0606"
-        android:text="Calculate"
         android:textColor="@color/design_default_color_background"
+        android:text="Calculate"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -143,7 +143,7 @@
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:text=""
-        android:textColor="@color/formTxtColour"
+        android:textColor="#3A0606"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
