--- a/app/src/main/res/layout/activity_display_lab_bk_details.xml
+++ b/app/src/main/res/layout/activity_display_lab_bk_details.xml
@@ -12,11 +12,11 @@
         android:id="@+id/txtLabApp"
         android:layout_width="350sp"
         android:layout_height="45sp"
-        android:background="@color/buttonTextColour"
+        android:background="#650C25"
         android:gravity="center_horizontal"
         android:text=" Booking Details of Patient"
         android:textAlignment="center"
-        android:textColor="@color/captions"
+        android:textColor="@color/design_default_color_background"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,7 +33,7 @@
         android:ems="10"
         android:hint=" Enter Patient Name..."
         android:inputType="textPersonName"
-        android:textColor="#022267"
+        android:textColor="#3A0606"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
         android:ems="10"
         android:hint="Enter E-mail(abc@gmail.com)"
         android:inputType="textEmailAddress"
-        android:textColor="#022267"
+        android:textColor="#3A0606"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,9 +62,9 @@
         android:id="@+id/btnUpdate"
         android:layout_width="119dp"
         android:layout_height="47dp"
-        android:background="@color/buttonBackground"
         android:text="Update"
-        android:textColor="@color/buttonTextColour"
+        android:background="#3A0606"
+        android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +80,7 @@
         android:ems="10"
         android:hint=" Enter Selected Lab Chemist ID..."
         android:inputType="number"
-        android:textColor="#022267"
+        android:textColor="#3A0606"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,7 @@
         android:ems="10"
         android:hint="Enter Contact Number"
         android:inputType="phone"
-        android:textColor="#022267"
+        android:textColor="#3A0606"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +114,7 @@
         android:gravity="center_horizontal"
         android:text="Appoinment Date"
         android:textAlignment="center"
-        android:textColor="@color/formTxtColour"
+        android:textColor="#3A0606"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -132,7 +132,7 @@
         android:layout_marginBottom="232dp"
         android:background="@color/formTxtBackground"
         android:text="Select Time"
-        android:textColor="@color/formTxtColour"
+        android:textColor="#3A0606"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -148,7 +148,7 @@
         android:ems="10"
         android:hint=" Select a Date"
         android:inputType="textPersonName"
-        android:textColor="#022267"
+        android:textColor="#3A0606"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -165,7 +165,7 @@
         android:ems="10"
         android:hint=" Select Time"
         android:inputType="textPersonName"
-        android:textColor="#022267"
+        android:textColor="#3A0606"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -177,10 +177,10 @@
         android:id="@+id/btnDelete"
         android:layout_width="119dp"
         android:layout_height="47dp"
-        android:background="@color/buttonBackground"
         android:text="Delete"
-        android:textColor="@color/buttonTextColour"
         android:textSize="18sp"
+        android:background="#3A0606"
+        android:textColor="@color/design_default_color_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.767"
