rearrange code for xml in actvty_lab_chem

--- a/app/src/main/res/layout/activity_my_lab_bookings.xml
+++ b/app/src/main/res/layout/activity_my_lab_bookings.xml
@@ -31,11 +31,11 @@
         android:id="@+id/btnAddLabApp"
         android:layout_width="65dp"
         android:layout_height="60dp"
-        android:background="@color/buttonBackground"
+        android:background="#3A0606"
         android:gravity="center_horizontal"
         android:text="Add New"
         android:textAlignment="center"
-        android:textColor="@color/buttonTextColour"
+        android:textColor="@color/design_default_color_background"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
