--- a/app/src/main/res/layout/activity_lab_chem_appointment.xml
+++ b/app/src/main/res/layout/activity_lab_chem_appointment.xml
@@ -1,177 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LabChemAppointment"
-    android:background="#EEF3FD"
-    >
-
-    <TextView
-        android:id="@+id/txtLabApp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lab_Chemist Appointment"
-        android:textColor="@color/captions"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05" />
-
-    <EditText
-        android:id="@+id/etxtPname"
-        android:layout_width="385dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint=" Enter Patient Name..."
-        android:inputType="textPersonName"
-        android:textColor="#022267"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.615"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.333" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="150dp"
-        android:layout_height="99dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.156"
-        app:srcCompat="@drawable/my" />
-
-    <EditText
-        android:id="@+id/etxtEmailAddress"
-        android:layout_width="385dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Enter E-mail(abc@gmail.com)"
-        android:inputType="textEmailAddress"
-        android:textColor="#022267"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.615"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.723" />
-
-    <Button
-        android:id="@+id/btnSbAppoinmnt"
-        android:layout_width="200sp"
-        android:layout_height="40sp"
-        android:background="@color/buttonBackground"
-        android:text="Submit Appoinment"
-        android:textColor="@color/buttonTextColour"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.916" />
-
-    <EditText
-        android:id="@+id/edtTextLabChemId"
-        android:layout_width="385dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint=" Enter Selected Lab Chemist ID..."
-        android:inputType="number"
-        android:textColor="#022267"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.615"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etxtPname" />
-
-    <EditText
-        android:id="@+id/editTextPhone"
-        android:layout_width="385dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Enter Contact Number"
-        android:inputType="phone"
-        android:textColor="#022267"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.692"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etxtEmailAddress"
-        app:layout_constraintVertical_bias="0.11" />
-
-    <Button
-        android:id="@+id/btnDatePicker"
-        android:layout_width="130dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/formTxtBackground"
-        android:gravity="center_horizontal"
-        android:text="Appoinment Date"
-        android:textAlignment="center"
-        android:textColor="@color/formTxtColour"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.943"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtTextLabChemId" />
-
-    <Button
-        android:id="@+id/btnTimePicker"
-        android:layout_width="130dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/formTxtBackground"
-        android:text="Select Time"
-        android:textColor="@color/formTxtColour"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.941"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />
-
-    <EditText
-        android:id="@+id/edtextdatePicker"
-        android:layout_width="222dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint=" Select a Date"
-        android:textColor="#022267"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/btnDatePicker"
-        app:layout_constraintHorizontal_bias="0.39"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtTextLabChemId" />
-
-    <EditText
-        android:id="@+id/edttxtTimePicker"
-        android:layout_width="222dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:ems="10"
-        android:hint=" Select Time"
-        android:inputType="textPersonName"
-        android:textColor="#022267"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/etxtEmailAddress"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtextdatePicker"
-        app:layout_constraintVertical_bias="0.461" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".LabChemAppointment"    android:background="#EEF3FD"    >    <TextView        android:id="@+id/txtLabApp"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="Lab_Chemist Appointment"        android:textColor="@color/captions"        android:textSize="28sp"        android:textStyle="bold"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.05" />    <EditText        android:id="@+id/etxtPname"        android:layout_width="385dp"        android:layout_height="wrap_content"        android:ems="10"        android:hint=" Enter Patient Name..."        android:inputType="textPersonName"        android:textColor="#022267"        android:textSize="18sp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.615"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.333" />    <ImageView        android:id="@+id/imageView2"        android:layout_width="150dp"        android:layout_height="99dp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.156"        app:srcCompat="@drawable/my" />    <EditText        android:id="@+id/etxtEmailAddress"        android:layout_width="385dp"        android:layout_height="wrap_content"        android:ems="10"        android:hint="Enter E-mail(abc@gmail.com)"        android:inputType="textEmailAddress"        android:textColor="#022267"        android:textSize="18sp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.615"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.723" />    <Button        android:id="@+id/btnSbAppoinmnt"        android:layout_width="200sp"        android:layout_height="40sp"        android:background="@color/buttonBackground"        android:text="Submit Appoinment"        android:textColor="@color/buttonTextColour"        android:textSize="18sp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.497"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.916" />    <EditText        android:id="@+id/edtTextLabChemId"        android:layout_width="385dp"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:ems="10"        android:hint=" Enter Selected Lab Chemist ID..."        android:inputType="number"        android:textColor="#022267"        android:textSize="18sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.615"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/etxtPname" />    <EditText        android:id="@+id/editTextPhone"        android:layout_width="385dp"        android:layout_height="wrap_content"        android:ems="10"        android:hint="Enter Contact Number"        android:inputType="phone"        android:textColor="#022267"        android:textSize="18sp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.692"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/etxtEmailAddress"        app:layout_constraintVertical_bias="0.11" />    <Button        android:id="@+id/btnDatePicker"        android:layout_width="130dp"        android:layout_height="40dp"        android:layout_marginTop="20dp"        android:background="@color/formTxtBackground"        android:gravity="center_horizontal"        android:text="Appoinment Date"        android:textAlignment="center"        android:textColor="@color/formTxtColour"        android:textSize="15sp"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.943"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/edtTextLabChemId" />    <Button        android:id="@+id/btnTimePicker"        android:layout_width="130dp"        android:layout_height="44dp"        android:layout_marginTop="20dp"        android:background="@color/formTxtBackground"        android:text="Select Time"        android:textColor="@color/formTxtColour"        android:textSize="16sp"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.941"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />    <EditText        android:id="@+id/edtextdatePicker"        android:layout_width="222dp"        android:layout_height="45dp"        android:layout_marginTop="20dp"        android:ems="10"        android:inputType="textPersonName"        android:hint=" Select a Date"        android:textColor="#022267"        android:textSize="18sp"        app:layout_constraintEnd_toStartOf="@+id/btnDatePicker"        app:layout_constraintHorizontal_bias="0.39"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/edtTextLabChemId" />    <EditText        android:id="@+id/edttxtTimePicker"        android:layout_width="222dp"        android:layout_height="wrap_content"        android:layout_marginStart="16dp"        android:layout_marginLeft="16dp"        android:ems="10"        android:hint=" Select Time"        android:inputType="textPersonName"        android:textColor="#022267"        android:textSize="18sp"        app:layout_constraintBottom_toTopOf="@+id/etxtEmailAddress"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/edtextdatePicker"        app:layout_constraintVertical_bias="0.461" /></androidx.constraintlayout.widget.ConstraintLayout>
