Lab chem appoinment image changed

--- a/app/src/main/res/layout/activity_lab_chemist_list.xml
+++ b/app/src/main/res/layout/activity_lab_chemist_list.xml
@@ -25,11 +25,11 @@
         android:id="@+id/btnGo"
         android:layout_width="135dp"
         android:layout_height="52dp"
-        android:background="@color/buttonBackground"
         android:gravity="center_horizontal"
         android:text="Add Appointment"
+        android:background="#3A0606"
+        android:textColor="@color/design_default_color_background"
         android:textAlignment="center"
-        android:textColor="@color/buttonTextColour"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -67,9 +67,9 @@
         android:id="@+id/btnPreLabApp"
         android:layout_width="155dp"
         android:layout_height="46dp"
-        android:background="@color/buttonBackground"
         android:text="previous Appoinments"
-        android:textColor="@color/buttonTextColour"
+        android:background="#3A0606"
+        android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
