changed TextView , txtTime text in to Select Time

--- a/app/src/main/res/layout/activity_lab_chem_appointment.xml
+++ b/app/src/main/res/layout/activity_lab_chem_appointment.xml
@@ -29,7 +29,7 @@
         android:layout_width="100sp"
         android:layout_height="30sp"
         android:background="@color/formTxtBackground"
-        android:text="Time"
+        android:text="Select Time"
         android:textColor="@color/formTxtColour"
         android:textSize="18sp"
         android:textStyle="bold"
