--- a/app/src/main/res/layout/activity_display_chemist_details.xml
+++ b/app/src/main/res/layout/activity_display_chemist_details.xml
@@ -62,7 +62,7 @@
         android:id="@+id/txtRegLab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Details"
+        android:text="My Details."
         android:textAlignment="center"
         android:textColor="@color/captions"
         android:textSize="30sp"
