--- a/app/src/main/res/layout/activity_display_lab_bk_details.xml
+++ b/app/src/main/res/layout/activity_display_lab_bk_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DisplayLabBkDetails"
+    android:background="@drawable/whiteback"
     >
 
 
@@ -12,11 +13,10 @@
         android:id="@+id/txtLabApp"
         android:layout_width="350sp"
         android:layout_height="45sp"
-        android:background="#650C25"
         android:gravity="center_horizontal"
         android:text=" Booking Details of Patient"
         android:textAlignment="center"
-        android:textColor="@color/design_default_color_background"
+        android:textColor="#000000"
         android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,11 +29,13 @@
     <EditText
         android:id="@+id/etxtPnameShowDetails"
         android:layout_width="385dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:ems="10"
         android:hint=" Enter Patient Name..."
         android:inputType="textPersonName"
-        android:textColor="#3A0606"
+        android:textColorHint="#FFFFFF"
+        android:background="@drawable/custom_textbox"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,26 +47,28 @@
     <EditText
         android:id="@+id/etxtEmailAddressShowDetails"
         android:layout_width="385dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
+        android:background="@drawable/custom_textbox"
         android:ems="10"
+        android:textColorHint="#FFFFFF"
         android:hint="Enter E-mail(abc@gmail.com)"
         android:inputType="textEmailAddress"
-        android:textColor="#3A0606"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.615"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.701" />
+        app:layout_constraintVertical_bias="0.687" />
 
     <Button
         android:id="@+id/btnUpdate"
         android:layout_width="119dp"
         android:layout_height="47dp"
         android:text="Update"
-        android:background="#3A0606"
-        android:textColor="@color/design_default_color_background"
+        android:background="@drawable/custom_button"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,11 +80,13 @@
     <EditText
         android:id="@+id/edtTextLabChemIdShowDetails"
         android:layout_width="385dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:ems="10"
+        android:textColorHint="#FFFFFF"
         android:hint=" Enter Selected Lab Chemist ID..."
         android:inputType="number"
-        android:textColor="#3A0606"
+        android:background="@drawable/custom_textbox"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,29 +98,30 @@
     <EditText
         android:id="@+id/editTextPhoneShowDetails"
         android:layout_width="385dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="112dp"
+        android:layout_height="30dp"
+        android:background="@drawable/custom_textbox"
         android:ems="10"
+        android:textColorHint="#FFFFFF"
         android:hint="Enter Contact Number"
         android:inputType="phone"
-        android:textColor="#3A0606"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.615"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etxtEmailAddress"
-        app:layout_constraintVertical_bias="0.11" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.793" />
 
     <Button
         android:id="@+id/btnDatePickerShowDetails"
         android:layout_width="130dp"
-        android:layout_height="40dp"
-        android:background="@color/formTxtBackground"
+        android:layout_height="35dp"
+        android:background="@drawable/custon_button2"
         android:gravity="center_horizontal"
         android:text="Appoinment Date"
         android:textAlignment="center"
-        android:textColor="#3A0606"
+        android:textColor="#000000"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,33 +129,35 @@
         app:layout_constraintHorizontal_bias="0.943"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45"
+        app:layout_constraintVertical_bias="0.464"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btnTimePickerShowDetails"
         android:layout_width="130dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="232dp"
-        android:background="@color/formTxtBackground"
+        android:layout_height="35dp"
+        android:background="@drawable/custon_button2"
         android:text="Select Time"
-        android:textColor="#3A0606"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.946"
+        app:layout_constraintHorizontal_bias="0.964"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.581" />
 
     <EditText
         android:id="@+id/edtextdatePickerShowDetails"
         android:layout_width="222dp"
-        android:layout_height="45dp"
+        android:layout_height="30dp"
         android:ems="10"
+        android:textColorHint="#FFFFFF"
         android:hint=" Select a Date"
         android:inputType="textPersonName"
-        android:textColor="#3A0606"
+        android:background="@drawable/custom_textbox"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,18 +169,20 @@
     <EditText
         android:id="@+id/edttxtTimePickerShowDetails"
         android:layout_width="222dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="232dp"
+        android:layout_height="30dp"
+        android:background="@drawable/custom_textbox"
         android:ems="10"
+        android:textColorHint="#FFFFFF"
         android:hint=" Select Time"
         android:inputType="textPersonName"
-        android:textColor="#3A0606"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.084"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtextdatePicker" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.584" />
 
     <Button
         android:id="@+id/btnDelete"
@@ -179,8 +190,8 @@
         android:layout_height="47dp"
         android:text="Delete"
         android:textSize="18sp"
-        android:background="#3A0606"
-        android:textColor="@color/design_default_color_background"
+        android:background="@drawable/custom_button"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.767"
