--- a/app/src/main/res/layout/activity_b_m_icalculate.xml
+++ b/app/src/main/res/layout/activity_b_m_icalculate.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BMIcalculate"
+    android:background="@drawable/whiteback"
     >
 
     <TextView
@@ -12,7 +13,7 @@
         android:layout_width="175dp"
         android:layout_height="37dp"
         android:text=""
-        android:textColor="#3A0606"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calculate BMI Index"
-        android:textColor="#670521"
+        android:textColor="#000000"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Height"
-        android:textColor="#650C25"
+        android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
         app:drawableTint="@color/colorPrimaryDark"
@@ -56,7 +57,7 @@
         android:id="@+id/txtbmiIndex"
         android:layout_width="91dp"
         android:layout_height="27dp"
-        android:background="#650C25"
+        android:background="#000000"
         android:text="  Your BMI"
         android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
@@ -72,7 +73,7 @@
         android:id="@+id/txtYouare"
         android:layout_width="77dp"
         android:layout_height="30dp"
-        android:background="#650C25"
+        android:background="#000000"
         android:text="  You Are"
         android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
@@ -89,7 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Weight"
-        android:textColor="#650C25"
+        android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -102,9 +103,11 @@
     <EditText
         android:id="@+id/edtTxtHgt"
         android:layout_width="193dp"
-        android:layout_height="49dp"
+        android:layout_height="30dp"
         android:ems="10"
         android:hint="    m"
+        android:background="@drawable/custom_textbox"
+        android:textColor="#FFFFFF"
         android:inputType="numberDecimal"
         app:layout_constraintBaseline_toBaselineOf="@+id/txtvHgt"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,9 +117,11 @@
     <EditText
         android:id="@+id/edtTxtWeight"
         android:layout_width="193dp"
-        android:layout_height="49dp"
+        android:layout_height="30dp"
         android:ems="10"
         android:hint="    kg"
+        android:background="@drawable/custom_textbox"
+        android:textColor="#FFFFFF"
         android:inputType="numberDecimal"
         app:layout_constraintBaseline_toBaselineOf="@+id/txtvWeight"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +132,7 @@
         android:id="@+id/btnCalc"
         android:layout_width="133dp"
         android:layout_height="58dp"
-        android:background="#3A0606"
+        android:background="@drawable/custom_button"
         android:textColor="@color/design_default_color_background"
         android:text="Calculate"
         android:textSize="18sp"
@@ -143,7 +148,7 @@
         android:layout_width="80dp"
         android:layout_height="30dp"
         android:text=""
-        android:textColor="#3A0606"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
