--- a/app/src/main/res/layout/activity_lab_chemist_list.xml
+++ b/app/src/main/res/layout/activity_lab_chemist_list.xml
@@ -5,7 +5,8 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LabChemistList">
+    tools:context=".LabChemistList"
+    android:background="@drawable/whiteback">
 
 
     <ListView
@@ -27,11 +28,11 @@
         android:layout_height="52dp"
         android:gravity="center_horizontal"
         android:text="Add Appointment"
-        android:background="#3A0606"
         android:textColor="@color/design_default_color_background"
         android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.133"
@@ -46,7 +47,7 @@
         android:layout_marginTop="8dp"
         android:text="Lab Chemists List"
         android:textStyle="bold"
-        android:textColor="#3A0606"
+        android:textColor="#000000"
         android:textSize="26sp"
         app:layout_constraintBottom_toTopOf="@+id/searchView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +69,7 @@
         android:layout_width="155dp"
         android:layout_height="46dp"
         android:text="previous Appoinments"
-        android:background="#3A0606"
+        android:background="@drawable/custom_button"
         android:textColor="@color/design_default_color_background"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
